<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/key_clear"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_clear"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_parentheses"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_parentheses"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_percent"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_percent"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_division"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_division"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_multiplication"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_multiplication"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_4"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_5"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_6"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_subtraction"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_subtraction"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_7"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_8"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_9"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_addition"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_addition"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_polarity"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_polarity"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size2"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_zero"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_zero"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_dot"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />

    <Button
        android:id="@+id/key_total"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/key_total"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="16dp"
        app:strokeColor="@color/dark_gray"
        app:strokeWidth="8dp" />


</GridLayout>